--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
         <header>
             <h1>Gabriel Calderón</h1>
-            <img src="profile.jpg" alt="profile picture">
+            <img src="/images/profile.jpg" alt="profile picture">
         </header>
         <main>
             <h2>WDD 230: Assignment Portal</h2>
@@ -31,7 +31,7 @@
             <p id="p1">&copy; <span id="currentyear"></span> | Gabriel Calderon | Quito, Ecuador | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
             <p id="p2">Last Updated: <span id="time"></span></p>
         </footer>
-        <script  src="lastdate.js"></script>
+        <script  src="/js/lastdate.js"></script>
     </div>
 </body>
 
