--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
             <h2>WDD 230: Assignment Portal</h2>
             <nav>      
                 <ul>
-                    <li>Lesson 1 - <a href="#">Lesson 1</a></li>
+                    <li>Lesson 1 - <a href="#">Assignment portal</a></li>
+                    <li>Lesson 2 - <a href="/lesson2/design-principles.html">Design principles</a></li>
                    
                 </ul>
             </nav>
         </main>
 
         <footer>
-            <p id="p1">&copy; <span id="currentyear"></span> | Gabriel Calderon | Quito, Ecuador | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+            <p id="p1">&copy; <span id="currentyear">2021</span> | Gabriel Calderon | Quito, Ecuador | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
             <p id="p2">Last Updated: <span id="time"></span></p>
         </footer>
         <script  src="/js/lastdate.js"></script>
