--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li>Lesson 1 - <a href="#">Assignment portal</a></li>
                     <li>Lesson 2 - <a href="/lesson2/design-principles.html">Design principles</a></li>
-                    <li>Lesson 3 - <a href="/lesson3/index.html">Website Plannig Documen</a></li>
+                    <li>Lesson 3 - <a href="/lesson3/index.html">Website Plannig Document</a></li>
                    
                 </ul>
             </nav>
