--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li>Lesson 1 - <a href="#">Assignment portal</a></li>
                     <li>Lesson 2 - <a href="/lesson2/design-principles.html">Design principles</a></li>
                     <li>Lesson 3 - <a href="/lesson3/index.html">Website Plannig Document</a></li>
+                    <li>Lesson 4 - <a href="/lesson4/preston-4.html">Preston</a></li>
                    
                 </ul>
             </nav>
