--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>Preston</title>
@@ -16,14 +16,14 @@
       <div class="header">
       <img class="logo" src="/lesson4/images/Weather-128.png" alt="good weather" width="100">
       <h1 class="title">The Good Weather</h1> 
-      <!-- <div class="p-img"> -->
+     
       
       <p>Your daily weather site!</p>
         </div><!-- </div> -->
     </header>
       <nav> 
         <ul class="navigation">
-        <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+        <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
         <li><a href="#" class="nav">Home</a></li>
         <li><a href="#" class="nav">Preston</a></li>
         <li><a href="#" class="nav">Soda Springs</a></li>
