--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Preston</title>
     <link  rel="stylesheet" href="/lesson4/css/style.css">
     <link  rel="stylesheet" href="/lesson4/css/large.css">
