--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leeson 2</title>
-    <link rel="stylesheet" href="/lesson2/css/normalize.css">
-    <link rel="stylesheet" href="/lesson2/css/style.css">
-    <link rel="stylesheet" href="/lesson2/css/large.css">
-  <link rel="stylesheet" href="/lesson2/css/medium.css">
-  <link rel="stylesheet" href="/lesson2/css/small.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/large.css">
+  <link rel="stylesheet" href="css/medium.css">
+  <link rel="stylesheet" href="css/small.css">
 </head>
 
 <body>
@@ -22,20 +22,20 @@
     <div class="column-wrap">
         <div class="column one-third">
             <div class="col-group"><h2>Contrast</h2><br>
-                <img src="/lesson2/images/dropbox.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.dropbox.com/">Dropbox</a>
+                <img src="images/dropbox.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.dropbox.com/">Dropbox</a>
             <br><p>Contrast is the practice of making design elements look different from each other 
                 in order to make the important elements stand out, it also can be used to create 
                 a focal point and establish visual interest by manipulating differences in color, size, space and other factors.</p></div>
         </div>
         <div class="column one-third">
             <div class="col-group"><h2>Alignment</h2><br>
-                <img src="/lesson2/images/amazon.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.amazon.com/">Amazon</a><p>Alignment as an 
+                <img src="images/amazon.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.amazon.com/">Amazon</a><p>Alignment as an 
                     effective web design principle 
                     allows us to make conscious decisions about how and where elements are placed on the page.</p></div>
         </div>
         <div class="column one-third">
             <div class="col-group"><h2>Repetition</h2><br>
-                <img src="/lesson2/images/versace.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.versace.com/">Versace</a>
+                <img src="images/versace.png" alt="Contrast" class = 'sectionclass'><br><a href = "https://www.versace.com/">Versace</a>
                 <p>Repetition in web design is to simply format your hyperlinks in the same 
                     way on every single page, so users know what to expect when they click on a link.
 
@@ -51,6 +51,6 @@
    
 </footer>
 
-<script  src="/lesson2/js/lastdate.js"></script>
+<script  src="js/lastdate.js"></script>
 </body>
 </html>
