--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Weather Site Plan</title>
-        <link rel="stylesheet" href="/lesson2/css/style.css">
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/large.css">
-        <link rel="stylesheet" href="/css/medium.css">
-        <link rel="stylesheet" href="/css/small.css">
+        <link rel="stylesheet" href="../lesson2/css/style.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/large.css">
+        <link rel="stylesheet" href="../css/medium.css">
+        <link rel="stylesheet" href="../css/small.css">
 
 
 
@@ -16,17 +16,17 @@
     </head>
     <body>
         <div id="content">
-            <header><img src="/lesson3/images/Weather-128.png" style="width: 100px" alt = "logo">
+            <header><img src="images/Weather-128.png" style="width: 100px" alt = "logo">
                 <h3>Goodweather</h3>
                 <h3>Your daily weather site!</h3>
                 <h1>Color scheme</h1>
                     </header>
             <nav>
                 <ul class="banner-box">
-                    <li><a href="/lesson3/index.html">Home</a></li>
-                    <li><a href="/lesson3/target-audience.html">Target Audience</a></li>
-                    <li><a href="/lesson3/color-scheme.html"> Color Scheme</a></li>
-                    <li><a href="/lesson3/typography.html">Typography</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="color-scheme.html"> Color Scheme</a></li>
+                    <li><a href="typography.html">Typography</a></li>
                 </ul>
     
             </nav>
@@ -52,7 +52,7 @@
             <p id="p2">Last Updated: <span id="time"></span></p>
            
         </footer>
-        <script src="/lesson3/js/lastdate.js"></script>
+        <script src="js/lastdate.js"></script>
           </div>
       </body>
 </html>
